<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/StyleBFondo"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="fill_vertical"
    android:orientation="vertical"
    tools:context=".IngresoClave" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_gravity="center"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:orientation="horizontal" >
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:contentDescription="@string/description_image_fondo"
            android:src="@drawable/fondo" />
    </LinearLayout>
    

   <TextView
        android:id="@+id/tituloClave"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="@color/blue0" 
        android:gravity="center"
        android:text="@string/title_activity_ingreso_clave"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />
   <ImageButton
	    android:id="@+id/iconoIngresoClave"
	    android:layout_width="48dp"
	    android:layout_height="48dp"
	    android:layout_alignParentLeft="true"
	    android:layout_marginLeft="0dp"
	    android:background="@drawable/lineatransparente"
	    android:contentDescription="@string/regresar"
	    android:onClick="cerrarIngresoclave"
	    android:src="@drawable/btn_back"  />
   <ImageButton
	    android:id="@+id/BotonAbrir"
	    android:layout_width="48dp"
	    android:layout_height="48dp"
	    android:layout_alignParentRight="true"
	    android:layout_marginRight="0dp"
	    android:background="@drawable/lineatransparente"
	    android:contentDescription="@string/boton_aplicarCifradoClave"
	    android:onClick="aplicarCifrado"
	    android:src="@drawable/ic_action_done" />
    <ImageButton
        android:id="@+id/BotonCifAll"
        android:layout_width="48dp"
        android:layout_height="48dp"
	    android:layout_alignParentRight="true"
	    android:layout_marginRight="0dp"
        android:onClick="aplicarCifradoVarios"
        android:contentDescription="@string/boton_aplicarCifradoClave"
        android:textSize="18sp"
	    android:src="@drawable/ic_action_done" 
	    android:background="@drawable/lineatransparente"
	    android:visibility="invisible"/>
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
         android:layout_below="@+id/tituloClave"
        android:layout_centerHorizontal="true"
        android:text="@string/texto_ingresoClave"
        android:textColor="@color/greyText"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/editTdescifrarSMS"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:ems="10"
        android:hint="@string/texto_ingresoClaveDes"
        android:inputType="textPassword"
        android:maxLength="18"/>  

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@+id/txStatus"
        android:indeterminate="false"
        android:minHeight="20dp"
        android:minWidth="200dp"
        android:progress="1"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/txStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTdescifrarSMS"
        android:layout_centerHorizontal="true"
        android:text="@string/mensajeEnProceso"
        android:textColor="#000000"
        android:textSize="16sp"
        android:visibility="invisible"  />

</RelativeLayout>