<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/StyleBFondo"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    tools:context=".RedactarActivity" >
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="right"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:orientation="horizontal" >
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="398dp"
            android:layout_gravity="right"
            android:contentDescription="@string/description_image_fondo"
            android:src="@drawable/fondo" />
    </LinearLayout>
    
    <TextView
       android:id="@+id/textPersonaRedactar"
       android:layout_width="fill_parent"
       android:layout_height="48dp"
       android:layout_gravity="center"
       android:layout_marginTop="0dp"
       android:background="@color/blue0"
       android:gravity="center"
       android:text="@string/mensajeNuevoSms"
       android:textColor="@color/blueGrey50"
       android:textSize="20sp" />
	<ImageButton
	    android:id="@+id/iconoBackRedactar"
	    android:layout_width="48dp"
	    android:layout_height="48dp"
	    android:layout_alignParentLeft="true"
	    android:layout_marginLeft="0dp"
	    android:background="@drawable/lineatransparente"
	    android:contentDescription="@string/regresar"
	    android:onClick="cerrar"
	    android:src="@drawable/btn_back"  />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="48dp" >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical" >
            <LinearLayout
                android:id="@+id/layout1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="16dp"
                android:gravity="center" >
                <EditText
                    android:id="@+id/editTnumeroOut"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_gravity="left"
                    android:layout_weight="0.8"
                    android:ems="10"
                    android:hint="@string/texto_numeroRedactar"
                    android:inputType="numberDecimal|textCapCharacters"
                    android:textColor="@color/blueGrey900Text"
                    android:textSize="18sp" />
                <ImageButton
                    android:id="@+id/imageButton1"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:background="@drawable/lineatransparente"
                    android:contentDescription="@string/description_image_addcontact"
                    android:onClick="contactos"
                    android:src="@drawable/btn_contact" />
            </LinearLayout>
            <EditText
                android:id="@+id/editTSMSOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/texto_MSMRedactar"
                android:inputType="textMultiLine"
                android:maxLength="80"
                android:textColor="@color/blueGrey900Text"
                android:textSize="18sp" />
             <TextView
                android:id="@+id/textVEtiquetaCifro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="8dp"
                android:maxLength="160"
                android:textColor="@color/blueGrey900Text"
                android:textSize="14sp" />
             <TextView
                android:id="@+id/textVSMSOutCifrido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:maxLength="160"
                android:textColor="@color/grey900Text"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
 
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:stretchColumns="*" >
       
		
        <TableRow
            android:background="@color/blue0">
			<ImageButton
                android:id="@+id/BotonDeshacer"
                android:src="@drawable/btn_undo"  
                android:layout_gravity="center"
                android:onClick="deshacer"                
                android:layout_height="48dp"
                android:layout_width="0dp"
                android:layout_weight=".33"
                android:background="@drawable/lineatransparente"
                android:contentDescription="@string/deshacer"/>            	
            <ImageButton
                android:id="@+id/BotonCifrar"
                android:src="@drawable/btn_cipher_g"
                 android:layout_gravity="center"
                android:onClick="ingresoClave"                
                android:layout_height="48dp"
                android:layout_width="0dp"
                android:layout_weight=".33"
                android:background="@drawable/lineatransparente"
                android:contentDescription="@string/boton_cifrarRedactar"/>
            <ImageButton
                android:id="@+id/button2"
                android:src="@drawable/btn_send_g"
                android:layout_gravity="center"               
                android:layout_height="48dp"
                android:layout_width="0dp"
                android:layout_weight=".33"
                android:background="@drawable/lineatransparente"
                android:onClick="verificarContenido"    
                android:contentDescription="@string/boton_enviarRedactar"/>
        </TableRow>
    </TableLayout>

</RelativeLayout>