<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" > 
    
    <LinearLayout
    android:layout_width="0dp"
    android:layout_weight=".2"
    android:layout_height="match_parent"    
    android:layout_marginLeft="16dp"    
    android:gravity="center"
    android:orientation="vertical" > 
    		 <ImageView
	        android:id="@+id/imageView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:contentDescription="@string/title_activity_contactos"
	        android:src="@drawable/ic_contacto_v" />
    </LinearLayout>
    
    <LinearLayout
    android:layout_width="0dp"
    android:layout_weight=".8"
    android:layout_height="match_parent"
    android:layout_marginRight="16dp"
	android:layout_marginLeft="16dp"   
    android:orientation="vertical" > 
    
	    <TextView
	        android:id="@+id/textNombreContacto"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	    	android:layout_marginTop="10dp"  
	        android:text="@string/text_nombreContacto"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	       	android:textColor="@color/blueGrey900Text" />
	
	    <TextView
	        android:id="@+id/textNumeroContacto"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="10dp"
	        android:text="@string/text_numeroLeer"
	        android:textAppearance="?android:attr/textAppearanceSmall"
	        android:textColor="@color/greyText" />
	</LinearLayout>
	
	
	
</LinearLayout>
