<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"    
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
   		android:layout_marginLeft="16dp"
    	android:layout_marginRight="16dp"
    	android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/texNameContact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".60"            
    		android:layout_marginBottom="0dp"
            android:layout_gravity="left"
            android:text="@string/text_nombreContacto"
            android:textSize="18sp"
            android:textColor="@color/blueGrey900Text"  />

        <TextView
            android:id="@+id/txfecha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_gravity="right"
            android:layout_weight=".40"
            android:gravity="right"
            android:text="@string/text_fecha"
            android:textColor="@color/greyText"
            android:textSize="14sp"  />

    </LinearLayout>

    <TextView
        android:id="@+id/texBodySMS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
   		android:layout_marginLeft="16dp"
    	android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/textBody"
        android:textSize="14sp" 
        android:lines="1"
        android:textColor="@color/greyText"/>

</LinearLayout>